# terbulator

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  chatgpt_connector_test.txt  config.yaml.example  test_display.sh
src/: app.rs  main.rs
src/clipboard/: mod.rs  selection.rs
src/config/: loader.rs  mod.rs  types.rs
src/input/: keyboard.rs  mod.rs  shortcuts.rs
src/pane/: layout.rs  manager.rs  mod.rs  pane.rs
src/renderer/: backend.rs  mod.rs  softbuffer_backend.rs  wgpu_backend.rs
src/terminal/: emulator.rs  grid.rs  mod.rs  pty.rs
src/terminal/image/: kitty.rs  mod.rs  sixel.rs
src/utils/: error.rs  mod.rs
