[package]
name = "terbulator"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI & Windowing
winit = "0.30"

# Rendering
wgpu = "0.19"
softbuffer = "0.4"
cosmic-text = "0.11"

# Terminal
vte = "0.13"
portable-pty = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Clipboard
arboard = "3.4"

# Image support
image = "0.25"
base64 = "0.22"

# Utilities
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"
